# openapi.json
@@ -45,14 +45,72 @@
         }
       }
     },
+    "/set-current-directory": {
+      "post": {
+        "tags": [
+          "System Control"
+        ],
+        "summary": "Change Current Directory",
+        "operationId": "change_current_directory_set_current_directory_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CDRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/get-current-directory": {
+      "get": {
+        "tags": [
+          "System Control"
+        ],
+        "summary": "Return Current Directory",
+        "operationId": "return_current_directory_get_current_directory_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          }
+        }
+      }
+    },
     "/run-command": {
       "post": {
         "tags": [
           "System Control"
         ],
-        "summary": "Run System Command",
-        "description": "Runs a system command.",
-        "operationId": "run_system_command_run_command_post",
+        "summary": "Run Terminal Command",
+        "description": "Runs a terminal command in the current directory",
+        "operationId": "run_terminal_command_run_command_post",
         "requestBody": {
           "content": {
             "application/json": {
@@ -325,6 +383,97 @@
         }
       }
     },
+    "/upload": {
+      "post": {
+        "tags": [
+          "Read/Write Files"
+        ],
+        "summary": "Upload File",
+        "description": "Uploads a file to the host system given a filepath and file.",
+        "operationId": "upload_file_upload_post",
+        "parameters": [
+          {
+            "name": "directory",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Directory"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_upload_file_upload_post"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/download": {
+      "get": {
+        "tags": [
+          "Read/Write Files"
+        ],
+        "summary": "Download File",
+        "description": "Downloads a file given a directory and filename.",
+        "operationId": "download_file_download_get",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DownloadRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/replace-text": {
       "post": {
         "tags": [
@@ -503,6 +652,33 @@
   },
   "components": {
     "schemas": {
+      "Body_upload_file_upload_post": {
+        "properties": {
+          "file": {
+            "type": "string",
+            "format": "binary",
+            "title": "File"
+          }
+        },
+        "type": "object",
+        "required": [
+          "file"
+        ],
+        "title": "Body_upload_file_upload_post"
+      },
+      "CDRequest": {
+        "properties": {
+          "directory": {
+            "type": "string",
+            "title": "Directory"
+          }
+        },
+        "type": "object",
+        "required": [
+          "directory"
+        ],
+        "title": "CDRequest"
+      },
       "CommandRequest": {
         "properties": {
           "command": {
@@ -515,6 +691,24 @@
           "command"
         ],
         "title": "CommandRequest"
+      },
+      "DownloadRequest": {
+        "properties": {
+          "directory": {
+            "type": "string",
+            "title": "Directory"
+          },
+          "filename": {
+            "type": "string",
+            "title": "Filename"
+          }
+        },
+        "type": "object",
+        "required": [
+          "directory",
+          "filename"
+        ],
+        "title": "DownloadRequest"
       },
       "FileMetadataRequest": {
         "properties": {
